Dependency loading with extensions now working. Need to implement a cache repository, will probably just have the DependencyCache use that internally.